@@ -25,7 +25,7 @@ CLUSTERING_FULL_LIBS=\
   
 
 #########################################################
-#             Clustering MRNetApp protocol              # 
+#             Parallel clustering protocol              # 
 #########################################################
 
 lib_LTLIBRARIES = \
@@ -50,15 +50,15 @@ libfilterTDBSCAN_la_SOURCES  = \
   TDBSCANTags.h \
   Utils.h
 
-libfilterTDBSCAN_la_CPPFLAGS = @MRNETAPP_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-libfilterTDBSCAN_la_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+libfilterTDBSCAN_la_CPPFLAGS = @SYNAPSE_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libfilterTDBSCAN_la_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
 libfilterTDBSCAN_la_LIBADD   = $(CLUSTERING_FULL_LIBS)
 
 libfilterXchangeDimensions_la_SOURCES = \
   XchangeDimensionsFilter.cpp \
   TDBSCANTags.h \
   Utils.h
-libfilterXchangeDimensions_la_CPPFLAGS = @MRNETAPP_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libfilterXchangeDimensions_la_CPPFLAGS = @SYNAPSE_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
 
 libfilterSupport_la_SOURCES = \
   SupportFilter.cpp \
@@ -66,7 +66,7 @@ libfilterSupport_la_SOURCES = \
   Support.h   
 #  JGG 'RTree.h' not available. Ask German!
 
-libfilterSupport_la_CPPFLAGS = @MRNETAPP_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libfilterSupport_la_CPPFLAGS = @SYNAPSE_CP_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
 
 PROTOCOL_COMMON_SRCS = \
   TDBSCANCore.cpp \
@@ -89,9 +89,9 @@ libTDBSCAN_fe_la_SOURCES  = \
   $(PROTOCOL_COMMON_SRCS) \
   TDBSCANRoot.cpp \
   TDBSCANRoot.h
-libTDBSCAN_fe_la_CPPFLAGS = @MRNETAPP_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-libTDBSCAN_fe_la_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-libTDBSCAN_fe_la_LIBADD   = @MRNETAPP_FE_LIBS@ $(CLUSTERING_FULL_LIBS) 
+libTDBSCAN_fe_la_CPPFLAGS = @SYNAPSE_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libTDBSCAN_fe_la_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+libTDBSCAN_fe_la_LIBADD   = @SYNAPSE_FE_LIBS@ $(CLUSTERING_FULL_LIBS) 
 
 libTDBSCAN_be_offline_la_SOURCES  = \
   $(PROTOCOL_COMMON_SRCS) \
@@ -99,9 +99,9 @@ libTDBSCAN_be_offline_la_SOURCES  = \
   TDBSCANWorker.h \
   TDBSCANWorkerOffline.cpp \
   TDBSCANWorkerOffline.h
-libTDBSCAN_be_offline_la_CPPFLAGS = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-libTDBSCAN_be_offline_la_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-libTDBSCAN_be_offline_la_LIBADD   = @MRNETAPP_BE_LIBS@ $(CLUSTERING_FULL_LIBS)
+libTDBSCAN_be_offline_la_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libTDBSCAN_be_offline_la_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+libTDBSCAN_be_offline_la_LIBADD   = @SYNAPSE_BE_LIBS@ $(CLUSTERING_FULL_LIBS)
 
 
 libTDBSCAN_be_online_la_SOURCES   = \
@@ -110,9 +110,9 @@ libTDBSCAN_be_online_la_SOURCES   = \
   TDBSCANWorker.h \
   TDBSCANWorkerOnline.cpp \
   TDBSCANWorkerOnline.h
-libTDBSCAN_be_online_la_CPPFLAGS  = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-libTDBSCAN_be_online_la_LDFLAGS   = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-libTDBSCAN_be_online_la_LIBADD    = @MRNETAPP_BE_LIBS@ $(CLUSTERING_FULL_LIBS)
+libTDBSCAN_be_online_la_CPPFLAGS  = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+libTDBSCAN_be_online_la_LDFLAGS   = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+libTDBSCAN_be_online_la_LIBADD    = @SYNAPSE_BE_LIBS@ $(CLUSTERING_FULL_LIBS)
 
 
 #########################################################
@@ -139,26 +139,26 @@ bin_PROGRAMS = TDBSCAN_FE.bin TDBSCAN_BE.bin TDBSCAN_FE_nobe.bin TDBSCAN_BE_nobe
 TDBSCAN_FE_bin_SOURCES  = \
   TDBSCAN_FE.cpp \
   TDBSCAN_FE.h
-TDBSCAN_FE_bin_CPPFLAGS = @MRNETAPP_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-TDBSCAN_FE_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-TDBSCAN_FE_bin_LDADD    = libTDBSCAN-fe.la @MRNETAPP_FE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_FE_bin_CPPFLAGS = @SYNAPSE_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+TDBSCAN_FE_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+TDBSCAN_FE_bin_LDADD    = libTDBSCAN-fe.la @SYNAPSE_FE_LIBS@ @CLUSTERING_LIBS@
 
 TDBSCAN_BE_bin_SOURCES  = \
   TDBSCAN_BE.cpp
-TDBSCAN_BE_bin_CPPFLAGS = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
-TDBSCAN_BE_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-TDBSCAN_BE_bin_LDADD    = libTDBSCAN-be-offline.la @MRNETAPP_BE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_BE_bin_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
+TDBSCAN_BE_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+TDBSCAN_BE_bin_LDADD    = libTDBSCAN-be-offline.la @SYNAPSE_BE_LIBS@ @CLUSTERING_LIBS@
 
 TDBSCAN_FE_nobe_bin_SOURCES  = \
   TDBSCAN_FE.cpp \
   TDBSCAN_FE.h
-TDBSCAN_FE_nobe_bin_CPPFLAGS = @MRNETAPP_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH
-TDBSCAN_FE_nobe_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-TDBSCAN_FE_nobe_bin_LDADD    = libTDBSCAN-fe.la @MRNETAPP_FE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_FE_nobe_bin_CPPFLAGS = @SYNAPSE_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH
+TDBSCAN_FE_nobe_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+TDBSCAN_FE_nobe_bin_LDADD    = libTDBSCAN-fe.la @SYNAPSE_FE_LIBS@ @CLUSTERING_LIBS@
 
 TDBSCAN_BE_nobe_bin_SOURCES  = \
   TDBSCAN_BE.cpp
-TDBSCAN_BE_nobe_bin_CPPFLAGS = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH -I/apps/OPENMPI/1.8.1-mellanox/include
-TDBSCAN_BE_nobe_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@ -L/apps/OPENMPI/1.8.1-mellanox/lib -lmpi_cxx
-TDBSCAN_BE_nobe_bin_LDADD    = libTDBSCAN-be-offline.la @MRNETAPP_BE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_BE_nobe_bin_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH -I/apps/OPENMPI/1.8.1-mellanox/include
+TDBSCAN_BE_nobe_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@ -L/apps/OPENMPI/1.8.1-mellanox/lib -lmpi_cxx
+TDBSCAN_BE_nobe_bin_LDADD    = libTDBSCAN-be-offline.la @SYNAPSE_BE_LIBS@ @CLUSTERING_LIBS@
 
